--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
-        <a href="./recipes/fesenjan.html">Fesenjan</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/fesenjan.html">Fesenjan</a></li>
+            <li><a href="./recipes/fesenjan.html">Hamburger</a></li>
+        </ul>
     </body>
 </html>
