--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,9 +7,36 @@
     </head>
     <body>
         <h1>Lasagna Recipe</h1>
-        <img src="./images/dog.jpg" alt="A dog picture" height="300" width="200">
-
+               <img src="../images/lasagna.jpg" alt="A lasagna picture" height="400" width="400">
         <h2>Description</h2>
+        <p>
+           For a very simple, short lasagna, use no-boil (oven-ready) noodles to skip the boiling step and a high-quality jarred marinara sauce to save time. 
+        </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 box (9 oz) No-boil lasagna noodles</li>
+            <li>1 jar (24 oz) Marinara or pasta sauce</li>
+            <li>1 container (15 oz) Ricotta cheese</li>
+            <li>2 cups Shredded mozzarella cheese</li>
+            <li>1 lb Ground beef or Italian sausage (optional, browned and drained)</li>
+        </ul>
+        
+        <h2>Steps</h2>
+        <ol>
+            <li>Prep: Preheat oven to 375°F (190°C). Lightly grease a 9x13-inch baking dish.</li>
+            <li>Layer 1: Spread a thin layer of sauce on the bottom of the dish. Lay 3–4 noodles on top.</li>
+            <li>Layer 2: Spread about 1/3 of the ricotta over the noodles, then add a layer of meat (if using), more sauce, and a handful of mozzarella.</li>
+            <li>Repeat: Repeat the layers (noodles, ricotta, meat/sauce, mozzarella) two more times until ingredients are used up.</li>
+            <li>Finish: End with a final layer of noodles topped with the remaining sauce and a generous amount of mozzarella.</li>
+            <li>Bake: Cover tightly with foil. Bake for 30 minutes. Remove foil and bake for another 10–15 minutes until the cheese is bubbly and golden.</li>
+            <li>Rest: Let it sit for 10 minutes before slicing to allow the layers to set.</li>
+        </ol>
+        
+        <h2>Quick Tip:</h2>
+        <p>
+            If you want it even faster, try a Skillet Lasagna where you break the noodles into pieces and cook everything in one pan on the stovetop in about 30 minutes.
+        </p>
 
         <a href="../index.html">Home</a>
     </body>
