Add details hamburger.html Fix fesenjan.html
Add the details for hamburger recipe. Fis the linked list in fesenjan.html

--- a/recipes/fesenjan.html
+++ b/recipes/fesenjan.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Fesenjan Recipe</h1>
 
-        <img src="../images/fesenjan.jpg" alt="A dog picture" height="300" width="200">
+        <img src="../images/fesenjan.jpg" alt="A dog picture" height="400" width="400">
         <h2>Description</h2>
         <p>
             Fesenjan (Persian Pomegranate and Walnut Stew) is traditionally a slow-cooked dish, 
@@ -17,35 +17,23 @@
         </p>
         <h2>Ingredients</h2>
         <ul>
-            <li><a href="recipes/yourrecipe.html">2 cups Walnuts (raw)</a></li>
-            <li><a href="recipes/yourrecipe.html">1 lb Boneless chicken thighs, cut into bite-sized pieces</a></li>
-            <li><a href="recipes/yourrecipe.html">1 Large onion, finely diced</a></li>
-            <li><a href="recipes/yourrecipe.html">1/2 cup Pomegranate molasses</a></li>
-            <li><a href="recipes/yourrecipe.html">2 cups Chicken stock (or water)</a></li>
-            <li><a href="recipes/yourrecipe.html">2 tbsp Sugar (optional)</a></li>
-            <li><a href="recipes/yourrecipe.html">Spices: 1/2 tsp Turmeric, 1/2 tsp Cinnamon, salt, and pepper</a></li>
+            <li> 2 cups Walnuts (raw) </li>
+            <li> 1 lb Boneless chicken thighs, cut into bite-sized pieces </li>
+            <li> 1 Large onion, finely diced </li>
+            <li> 1/2 cup Pomegranate molasses </li>
+            <li> 2 cups Chicken stock (or water) </li>
+            <li> 2 tbsp Sugar (optional) </li>
+            <li> Spices: 1/2 tsp Turmeric, 1/2 tsp Cinnamon, salt, and pepper </li>
         </ul>
         
         <h2>Steps</h2>
         <ol>
-            <li><a href="recipes/yourrecipe.html">
-                Pulse the walnuts in a food processor until they are finely ground (like a coarse meal or flour).
-                </a></li>
-            <li><a href="recipes/yourrecipe.html">
-                In a large pot or Dutch oven, heat a little oil and brown the chicken pieces for about 5 minutes. Remove and set aside.
-                </a></li>
-            <li><a href="recipes/yourrecipe.html">
-                In the same pot, sauté the onion until soft and golden (about 8–10 minutes). Stir in the turmeric, cinnamon, salt, and pepper.
-                </a></li>
-            <li><a href="recipes/yourrecipe.html">
-                Return the chicken to the pot. Stir in the ground walnuts, pomegranate molasses, stock, and sugar.
-                </a></li>
-            <li><a href="recipes/yourrecipe.html">
-                Bring to a boil, then reduce heat to very low. Cover and simmer for 45–50 minutes. Stir occasionally so the walnuts don't stick to the bottom.
-                </a></li>
-            <li><a href="recipes/yourrecipe.html">
-                The stew is done when the sauce is thick, dark brown, and the oil from the walnuts has risen to the surface. Taste and add more sugar if it’s too tart. 
-                </a></li>
+            <li>Pulse the walnuts in a food processor until they are finely ground (like a coarse meal or flour).</li>
+            <li>In a large pot or Dutch oven, heat a little oil and brown the chicken pieces for about 5 minutes. Remove and set aside.</li>
+            <li>In the same pot, sauté the onion until soft and golden (about 8–10 minutes). Stir in the turmeric, cinnamon, salt, and pepper.</li>
+            <li>Return the chicken to the pot. Stir in the ground walnuts, pomegranate molasses, stock, and sugar.</li>
+            <li>Bring to a boil, then reduce heat to very low. Cover and simmer for 45–50 minutes. Stir occasionally so the walnuts don't stick to the bottom.</li>
+            <li>The stew is done when the sauce is thick, dark brown, and the oil from the walnuts has risen to the surface. Taste and add more sugar if it’s too tart.</li>
         </ol>
         
         <h2>Quick Tip:</h2>
