--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/fesenjan.html">Fesenjan</a></li>
-            <li><a href="./recipes/fesenjan.html">Hamburger</a></li>
+            <li><a href="./recipes/hamburger.html">Hamburger</a></li>
         </ul>
     </body>
 </html>
